# stm32_gcc_template

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/inc/: main.h
app/src/: main.c  startup_stm32f40_41xxx.s  system_stm32f4xx.c
cmake/: toolchain.cmake
